--- a/lab_2_submission/lab_2_submission_Aug_6.rmd
+++ b/lab_2_submission/lab_2_submission_Aug_6.rmd
@@ -219,9 +219,9 @@ p1 <- ggplot(my_data, aes(x = Student.Attendance, y = Student.Success)) +
   ) +
   theme_minimal() +
   theme(
-    plot.title = element_text(hjust = 0.5, size = 16, face = "bold"),
-    axis.title.x = element_text(size = 12, face = "bold"),
-    axis.title.y = element_text(size = 12, face = "bold")
+    plot.title = element_text(hjust = 0.5, size = 12, face = "bold"),
+    axis.title.x = element_text(size = 12),
+    axis.title.y = element_text(size = 12)
   )
 
 grade <- rep(c("Very Weak", "Weak", "Neutral", "Strong", "Very Strong"), 6)
@@ -241,13 +241,14 @@ d <- data.frame(variable, grade, mean)
 p2 <- ggplot(d, aes(fill = variable, y = mean, x = grade)) +
   geom_bar(position = "dodge", stat = "identity") +
   labs(
+    title = "Mean Student Success Pct by Learning Environment Variable",
     y = "Mean Student Success Pct" # Naming the y-axis
   ) +
   theme_minimal() +
   theme(
-    plot.title = element_text(hjust = 0.5, size = 16, face = "bold"),
-    axis.title.x = element_text(size = 12, face = "bold"),
-    axis.title.y = element_text(size = 12, face = "bold")
+    plot.title = element_text(hjust = 0.5, size = 12, face = "bold"),
+    axis.title.x = element_text(size = 12),
+    axis.title.y = element_text(size = 12)
   )
 grid.arrange(p1, p2)
 ```
@@ -401,7 +402,6 @@ mod13 <- lm(Student.Success~Student.Attendance + Teacher.Attendance + Involved.F
 waldtest(mod10, mod13,  vcov=vcovHC(mod13, type="HC0")) # not significant
 
 ```
-
 
 # Results
 
