--- a/lab_2_submission/lab_2_submission_Aug_6.rmd
+++ b/lab_2_submission/lab_2_submission_Aug_6.rmd
@@ -20,11 +20,6 @@ header-includes:
  \floatplacement{figure}{H}
 ---
 
-```{r}
-tinytex::install_tinytex()
-```
-
-
 ```{=tex}
 \newpage
 \setcounter{page}{1}
@@ -159,9 +154,13 @@ Through this analysis, we aim to provide Chicago elementary school superintenden
 
 # Data and Methodology
 
-The data for this study is from the 2012 School Progress Report Card for the elementary schools in the Chicago Public School System, it was made public by the city of Chicago. Each row represents an elementary school in the school district. The dataset had 460 rows, however, there were schools that had missing values or had a "not enough data record" in our variables of interest. There seemed to be no obvious pattern in the schools that had missing values, so we chose to exclude these from our analysis, which left us with 218 observations. 
+The data for this study is from the 2012 School Progress Report Card for the elementary schools in the Chicago Public School System, it was made public by the city of Chicago. Each row represents an elementary school in the school district. The dataset had 460 rows, however, there were schools that had missing values or had a "not enough data record" in our variables of interest. There seemed to be no obvious pattern in the schools that had missing values, so we chose to exclude these from our analysis, which left us with 218 observations.
 
-Average daily student attendance was one of the main variables of interest provided in the dataset. Studies have shown that student attendance is one of the most important factors in student success in the classroom[^3]. Motivation in general has been shown to be very important for learning, and attendance is a key measure of a student's academic motivation[^4]. Additionally, this dataset also contains a grade for several learning environment variables. Schools were graded on a 5 point scale from "very weak" to "very strong" on how well the school involved families, how supportive the environment was, how safe the school was, if the leadership was focused, if the instruction was focused and challenging, and how well the teachers worked together. Additionally, there was average daily attendance variable for teachers. These student motivation and learning environment variables were the ones that we were primarily interested in to understand which ones were significantly associated with academic success. We are interested in using a regression model to evaluate which of these classroom experience variables have significant coefficients to explain the variability in academic success. 
+Average daily student attendance was one of the main variables of interest provided in the dataset. Studies have shown that student attendance is one of the most important factors in student success in the classroom[^3]. Motivation in general has been shown to be very important for learning, and attendance is a key measure of a student's academic motivation[^4]. Additionally, this dataset also contains a grade for several learning environment variables. Schools were graded on a 5 point scale from "very weak" to "very strong" on how well the school involved families, how supportive the environment was, how safe the school was, if the leadership was focused, if the instruction was focused and challenging, and how well the teachers worked together. Additionally, there was average daily attendance variable for teachers. These student motivation and learning environment variables were the ones that we were primarily interested in to understand which ones were significantly associated with academic success. We are interested in using a regression model to evaluate which of these classroom experience variables have significant coefficients to explain the variability in academic success.
+
+[^3]: Every School Day Counts: The Forum Guide to collecting and using attendance data. National Center for Education Statistics (NCES) Home Page, a part of the U.S. Department of Education. (n.d.). <https://nces.ed.gov/pubs2009/attendancedata/chapter1a.asp>.
+
+[^4]: Davis, L. (2015). STUDENT ATTENDANCE: A SCHOOL'S INTERVENTION TO INCREASE ATTENDANCE. [online] Available at: <https://www.nwmissouri.edu/library/researchpapers/2015/Davis,%20Luke.pdf> [Accessed 7 Aug. 2023].
 
 We also wanted to control for other factors that impact the school that were not directly related to what was in the classroom. To do so, we incorporated an indicator variable showing if the school was on a regular schedule or a shortened summer schedule to reduce learning loss over summer break, the number of years the school had been on probation, disciplinary policy (the number of misconducts resulting in suspension and average days of suspension), and location (longitude and latitude) as variables to consider in our model.
 
@@ -202,7 +201,7 @@ tapply(my_data$Student.Success, my_data$Ambitious.Instruction, mean)
 tapply(my_data$Student.Success, my_data$Collaborative.Teachers, mean)
 ```
 
-```{r Location eda, echo=FALSE, fig.keep='last'}
+```{r Location eda, echo=FALSE, include=FALSE}
 #location exploration
 # my_data$Student.Success <- as.numeric(gsub("%", "", my_data$Student.Success)) * 100
 
@@ -229,8 +228,8 @@ p1 <- ggplot(my_data, aes(x = Student.Attendance, y = Student.Success)) +
   theme_minimal() +
   theme(
     plot.title = element_text(hjust = 0.5, size = 12, face = "bold"),
-    axis.title.x = element_text(size = 12),
-    axis.title.y = element_text(size = 12)
+    axis.title.x = element_text(size = 10),
+    axis.title.y = element_text(size = 10)
   )
 
 grade <- rep(c("Very Weak", "Weak", "Neutral", "Strong", "Very Strong"), 6)
@@ -256,21 +255,18 @@ p2 <- ggplot(d, aes(fill = variable, y = mean, x = grade)) +
   theme_minimal() +
   theme(
     plot.title = element_text(hjust = 0.5, size = 12, face = "bold"),
-    axis.title.x = element_text(size = 12),
-    axis.title.y = element_text(size = 12)
+    axis.title.x = element_text(size = 10),
+    axis.title.y = element_text(size = 10)
   )
 grid.arrange(p1, p2)
 ```
+
+
 Our exploratory plots showed a roughly linear relationship between our variables of interest and student success. The structure of our model was
 
-$$\hat{\text{Student Success}} = \beta_0 + \beta_1 \cdot \text{Student Attendance} + \text{Y}\gamma + \text{Z}\delta$$
-Y is a row vector of learning environment variables and $\gamma$ is a column vector of the coefficients. Z is a row vector of the additional control covariates and $\delta$ is a column vector of the coefficients.
+$$\hat{\text{Student Success}} = \beta_0 + \beta_1 \cdot \text{Student Attendance} + \text{Y}\gamma + \text{Z}\delta$$ Y is a row vector of learning environment variables and $\gamma$ is a column vector of the coefficients. Z is a row vector of the additional control covariates and $\delta$ is a column vector of the coefficients.
 
-Because of the importance of student attendance, we wanted to run a naive model with just this variable. We ran a wald test for nested models, testing one variable at a time starting with the learning environment variables as they appeared in the dataset to identify the significant learning environment variables and did the same with the other covariates. 
-
-[^3]: Every School Day Counts: The Forum Guide to collecting and using attendance data. National Center for Education Statistics (NCES) Home Page, a part of the U.S. Department of Education. (n.d.). https://nces.ed.gov/pubs2009/attendancedata/chapter1a.asp.
-[^4]: Davis, L. (2015). STUDENT ATTENDANCE: A SCHOOL’S INTERVENTION TO INCREASE ATTENDANCE. [online] Available at: https://www.nwmissouri.edu/library/researchpapers/2015/Davis,%20Luke.pdf [Accessed 7 Aug. 2023].
-
+Because of the importance of student attendance, we wanted to run a naive model with just this variable. We ran a wald test for nested models, testing one variable at a time starting with the learning environment variables as they appeared in the dataset to identify the significant learning environment variables and did the same with the other covariates.
 
 ```{r Correlation Matrix, echo=FALSE, include=FALSE}
 # Exclude the specific columns from the subset
@@ -447,7 +443,7 @@ stargazer(model_naive, learning_environment, controls, model_complex,
           single.row = TRUE,  # Combine into a single row
           type = "latex", # Output in LaTeX format
           digits=2,
-          
+          font.size="small"
           ) 
 ```
 
